--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dirs = "^4.0.0"
+thiserror = "^1.0.0"
+wildmatch = "^2.1.0"
 # session
 ssh2 = { version = "^0.9.0", optional = true }
 
