--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
 categories = ["network-programming"]
-description = "a ssh2 config parser with integration for ssh2 library"
+description = "a ssh configuration parser for ssh2 library"
 documentation = "https://docs.rs/ssh2-config"
 edition = "2021"
 homepage = "https://veeso.github.io/ssh2-config/"
@@ -16,15 +16,8 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dirs = "^4.0.0"
 thiserror = "^1.0.0"
 wildmatch = "^2.1.0"
-# session
-ssh2 = { version = "^0.9.0", optional = true }
 
 [dev-dependencies]
 pretty_assertions = "^1.0.0"
-
-[features]
-default = [ "session" ]
-session = [ "ssh2" ]
