--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,13 @@ thiserror = "^1.0.0"
 wildmatch = "^2.1.0"
 
 [dev-dependencies]
+dirs = "^4.0.0"
 pretty_assertions = "^1.0.0"
+rpassword = "^5.0.0"
+ssh2 = "^0.9.0"
 tempfile = "^3.2.0"
+
+[[example]]
+name = "client"
+path = "examples/client.rs"
+
