--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "MIT"
 name = "ssh2-config"
 readme = "README.md"
 repository = "https://github.com/veeso/ssh2-config"
-version = "0.1.1"
+version = "0.1.2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -29,3 +29,7 @@ tempfile = "^3.2.0"
 [[example]]
 name = "client"
 path = "examples/client.rs"
+
+[[example]]
+name = "query"
+path = "examples/query.rs"
