--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,13 @@ license = "MIT"
 name = "ssh2-config"
 readme = "README.md"
 repository = "https://github.com/veeso/ssh2-config"
-version = "0.1.6"
+version = "0.2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dirs = "^4"
+bitflags = "^2"
+dirs = "^5"
 thiserror = "^1"
 wildmatch = "^2.1"
 
