fix: correctly apply configuration precedence in reverse parsing order
This change fixes #11:

Previously, the order of precedence applied to
parsed configuration was incorrect.

Configuration was parsed, then sorted in
alphabetical order.

Algorithms (ciphers, key
exchange algorithms, MACs, etc.) were incorrectly
applied during parsing.

The correct precedence order follows
https://linux.die.net/man/5/ssh_config: the
configuration is read from top to bottom,
precedence is applied from bottom (lowest)
to the top (highest precedence).

Options preceding the first `Host` block are
considered implicit command line options, in
line with OpenSSH's own implementation.

This patch includes the following changes:

- Remove the alphabetic ordering of host sections.

- Merge matching host sections in reverse order.

- More efficiently merge host sections with
  vastly reduced `clone`s. (`clone` on demand.)

- Resolve algorithms not during the parsing,
  but during the resolving stage.

- More efficiently resolve algorithms, without
  source list mutation.

- Adjust existing unit tests to test the corrected
  precedence algorithm.

--- a/assets/ssh.config
+++ b/assets/ssh.config
@@ -1,14 +1,11 @@
 # ssh config example
 
+# Command line options, overriding host-specific options
 Compression           yes
 ConnectionAttempts    10
 ConnectTimeout        60
 ServerAliveInterval   40
 TcpKeepAlive          yes
-
-Ciphers         aes128-ctr,aes192-ctr,aes256-ctr
-KexAlgorithms   diffie-hellman-group-exchange-sha256
-MACs            hmac-sha2-512,hmac-sha2-256,hmac-ripemd160
 
 # Host configuration
 
@@ -30,3 +27,8 @@ Host tostapane
 Host    192.168.1.30
     User            nutellaro
     RemoteForward   123
+
+Host *
+    Ciphers         aes128-ctr,aes192-ctr,aes256-ctr
+    KexAlgorithms   diffie-hellman-group-exchange-sha256
+    MACs            hmac-sha2-512,hmac-sha2-256,hmac-ripemd160
