--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
 categories = ["network-programming"]
 description = "an ssh configuration parser for ssh2-rs"
 documentation = "https://docs.rs/ssh2-config"
-edition = "2021"
+edition = "2024"
 homepage = "https://veeso.github.io/ssh2-config/"
 include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
 keywords = ["ssh2", "ssh", "ssh-config", "ssh-config-parser"]
@@ -11,21 +11,28 @@ license = "MIT"
 name = "ssh2-config"
 readme = "README.md"
 repository = "https://github.com/veeso/ssh2-config"
-version = "0.3.0"
+version = "0.4.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 bitflags = "^2"
-dirs = "^5"
+dirs = "^6"
+log = "^0.4"
+glob = "0.3"
 thiserror = "^2"
 wildmatch = "^2"
 
 [dev-dependencies]
+env_logger = "^0.11"
 pretty_assertions = "^1"
 rpassword = "^7"
-ssh2 = "^0.9.0"
+ssh2 = "^0.9"
 tempfile = "^3"
+
+[features]
+default = []
+nolog = ["log/max_level_off"]
 
 [[example]]
 name = "client"
