feat: ToString and Display for SshConfig
It is now possible to serialize ssh2 config by using the ToString or Display trait to SshConfig

fix #10

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,7 @@ path = "examples/client.rs"
 [[example]]
 name = "query"
 path = "examples/query.rs"
+
+[[example]]
+name = "print"
+path = "examples/print.rs"
