--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ description = "an ssh configuration parser for ssh2-rs"
 documentation = "https://docs.rs/ssh2-config"
 edition = "2024"
 homepage = "https://veeso.github.io/ssh2-config/"
-include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
+include = ["src/**/*", "examples/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
 keywords = ["ssh2", "ssh", "ssh-config", "ssh-config-parser"]
 license = "MIT"
 name = "ssh2-config"
