--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ name = "ssh2-config"
 readme = "README.md"
 repository = "https://github.com/veeso/ssh2-config"
 version = "0.5.0"
+build = "build/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -29,6 +30,10 @@ pretty_assertions = "^1"
 rpassword = "^7"
 ssh2 = "^0.9"
 tempfile = "^3"
+
+[build-dependencies]
+anyhow = "1"
+git2 = "0.20"
 
 [features]
 default = []
