--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ categories = ["network-programming"]
 description = "an ssh configuration parser for ssh2-rs"
 documentation = "https://docs.rs/ssh2-config"
 edition = "2024"
+rust-version = "1.88.0"
 homepage = "https://veeso.github.io/ssh2-config/"
 include = [
   "build/**/*",
