--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: Build
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -10,10 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
+
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -22,11 +23,21 @@ jobs:
 
       - name: Set up environment for tests
         run: mkdir -p $HOME/.ssh && touch $HOME/.ssh/config
+
       - name: build
         run: cargo build --verbose
-      - name: Style check
-        run: cargo fmt --all --check
+
       - name: Run tests
         run: cargo test
+
       - name: Clippy
         run: cargo clippy -- -Dwarnings
+
+      - name: Set up Rust (nightly)
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: nightly
+          components: clippy, rustfmt
+
+      - name: fmt
+        run: cargo +nightly fmt --all --check
